; ModuleID = '/home/carl/AnghaBench/nnn/src/extr_nnn.c_endselection.c'
source_filename = "/home/carl/AnghaBench/nnn/src/extr_nnn.c_endselection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@cfg = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@selbufpos = common dso_local global i64 0, align 8
@pselbuf = common dso_local global i32 0, align 4
@copier = common dso_local global i32 0, align 4
@F_NOTRACE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @endselection to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @endselection() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cfg, i32 0, i32 0), align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %15

3:                                                ; preds = %0
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cfg, i32 0, i32 0), align 8
  %4 = load i64, i64* @selbufpos, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %14

6:                                                ; preds = %3
  %7 = load i32, i32* @pselbuf, align 4
  %8 = load i64, i64* @selbufpos, align 8
  %9 = sub nsw i64 %8, 1
  %10 = call i32 @writesel(i32 %7, i64 %9)
  %11 = load i32, i32* @copier, align 4
  %12 = load i32, i32* @F_NOTRACE, align 4
  %13 = call i32 @spawn(i32 %11, i32* null, i32* null, i32* null, i32 %12)
  br label %14

14:                                               ; preds = %6, %3
  br label %15

15:                                               ; preds = %14, %0
  ret void
}

declare dso_local i32 @writesel(i32, i64) #1

declare dso_local i32 @spawn(i32, i32*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
